--- a/src/main/webapp/WEB-INF/config/database.properties
+++ b/src/main/webapp/WEB-INF/config/database.properties
@@ -1,5 +1,5 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/repository
-db.user=user
+db.url=jdbc:mysql://127.0.0.1:3306/database
+db.user=root
 db.password=
 db.poolSize=5
