--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,13 @@
             <artifactId>jsch</artifactId>
             <version>0.1.53</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 
     </dependencies>
 
